--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.4.9",
+        "aacotroneo/laravel-saml2": "^2.1",
         "barryvdh/laravel-dompdf": "^0.9.0",
         "cviebrock/eloquent-sluggable": "^4.8",
         "doctrine/dbal": "v2.4.2",
